footer some fix

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/nice-select2.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <title>N-Code</title>
 
@@ -310,8 +310,8 @@
         </div>
         <div class="roadmap-step-info">
           <div class="roadmap-step-info__item active">
-            <p></p>
             <p>Залишити заявку у формі зворотнього зв’язку чи подзвонити 067 000 00 00</p>
+            <p></p>
           </div>
           <div class="roadmap-step-info__item">
             <p>Отримати консультацію у менеджера та записатись на безкоштовне пробне заняття.</p>
@@ -633,9 +633,6 @@
               <img src="img/visa-ico.svg" alt="">
             </div>
           </div>
-          <div class="footer__copyright">
-            <p>&#169; Компанія N-CODE 2023</p>
-          </div>
         </div>
         <div class="col">
           <p class="footer__title">Школа
@@ -678,6 +675,9 @@
               class="btn_blue footer__btn btn" href="#">ЗАЛИШИТИ ВІДГУК</a>
           </div>
         </div>
+      </div>
+      <div class="footer__copyright">
+        <p>&#169; Компанія N-CODE 2023</p>
       </div>
     </div>
   </footer>
@@ -732,9 +732,7 @@
       </div>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <script src="js/nice-select2.js"></script>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
 </body>
