--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <ul class="menu__nav">
             <li class="menu__item"><a href="#">Про нас</a>
             </li>
-            <li class="menu__item"><a href="#">Ментори</a>
+            <li class="menu__item"><a href="tutors.html">Ментори</a>
             </li>
             <li class="menu__item"><a href="#">Вiдгуки</a>
             </li>
