--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/nice-select2.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <title>N-Code</title>
@@ -36,7 +35,7 @@
           <ul class="menu__nav">
             <li class="menu__item"><a href="#">Про нас</a>
             </li>
-            <li class="menu__item"><a href="#">Ментори</a>
+            <li class="menu__item"><a href="tutors.html">Ментори</a>
             </li>
             <li class="menu__item"><a href="#">Вiдгуки</a>
             </li>
@@ -732,7 +731,6 @@
       </div>
     </div>
   </footer>
-  <script src="js/nice-select2.js"></script>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
 </body>
