--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header class="header">
       <div class="container">
         <div class="logo">
-          <img src="img/logo.svg" alt="logo">
+          <a href="index.html">
+            <img src="img/logo.svg" alt="logo">
+          </a>
         </div>
         <menu class="menu">
           <div class="hamburger-menu">
@@ -34,11 +36,11 @@
             </div>
           </div>
           <ul class="menu__nav">
-            <li class="menu__item"><a href="#">Про нас</a>
+            <li class="menu__item"><a href="index.html">Про нас</a>
             </li>
             <li class="menu__item"><a href="tutors.html">Ментори</a>
             </li>
-            <li class="menu__item"><a href="#">Вiдгуки</a>
+            <li class="menu__item"><a href="feedback.html">Вiдгуки</a>
             </li>
             <li class="menu__item"><a href="#">Подарувати сертифiкат</a>
             </li>
@@ -58,11 +60,11 @@
           </div>
         </div>
         <ul class="menu__nav">
-          <li class="menu__item"><a href="#">Про нас</a>
+          <li class="menu__item"><a href="index.html">Про нас</a>
           </li>
-          <li class="menu__item"><a href="#">Ментори</a>
+          <li class="menu__item"><a href="tutors.html">Ментори</a>
           </li>
-          <li class="menu__item"><a href="#">Вiдгуки</a>
+          <li class="menu__item"><a href="feedback.html">Вiдгуки</a>
           </li>
           <li class="menu__item"><a href="#">Подарувати сертифiкат</a>
           </li>
@@ -79,7 +81,7 @@
         <img src="./img/main-slide.png" alt="">
       </div><a class="btn" href="#">Отримати консультацію менеджера</a>
     </div>
-    <section class="advantages">
+    <section class="advantages" id="advantages">
       <h2 class="section-title">НАШi ПЕРЕВАГИ</h2>
       <div class="container">
         <div class="advantages__item"><span class="item__num">01</span>
