--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="content-container">
-    <header class="header">
+    <header class="header" id="header">
       <div class="container">
         <div class="logo">
           <a href="index.html">
@@ -25,30 +25,28 @@
         </div>
         <menu class="menu">
           <div class="hamburger-menu">
-            <div class="hamburger"><span></span>
-            </div>
-          </div>
-          <div class="header__items"> <a class="phone" href="tel:+380670000000">+380670000000</a>
-            <div class="language">
-              <div class="language__ico">
-                <img src="img/ukraine.svg" alt="ukraine">
-              </div>
+            <div class="hamburger"><span> </span>
             </div>
           </div>
           <ul class="menu__nav">
-            <li class="menu__item"><a href="index.html">Про нас</a>
+            <li class="menu__item"><a href="/">Головна</a>
             </li>
-            <li class="menu__item"><a href="tutors.html">Ментори</a>
-            </li>
-            <li class="menu__item"><a href="feedback.html">Вiдгуки</a>
-            </li>
-            <li class="menu__item"><a href="#">Подарувати сертифiкат</a>
+            <li class="menu__item"><a href="#">Про нас</a>
             </li>
             <li class="menu__item"><a href="#">Контакти</a>
             </li>
-            <li class="menu__item"><a href="null">Кабiнет</a>
+            <li class="menu__item"><a href="#">Кабинет</a>
             </li>
           </ul>
+          <div class="header__items"><a class="phone" href="tel:+380670000000">+380670000000</a>
+            <div class="items-wrap"><a class="action-btn btn btn_blue" href="#callback-form">Замовити дзвінок</a>
+              <div class="language">
+                <div class="language__ico">
+                  <img src="img/ukraine.svg" alt="ukraine">
+                </div>
+              </div>
+            </div>
+          </div>
         </menu>
       </div>
       <div class="mob-menu">
@@ -60,17 +58,13 @@
           </div>
         </div>
         <ul class="menu__nav">
-          <li class="menu__item"><a href="index.html">Про нас</a>
+          <li class="menu__item"><a href="/">Головна</a>
           </li>
-          <li class="menu__item"><a href="tutors.html">Ментори</a>
+          <li class="menu__item"><a href="#">Про нас</a>
           </li>
-          <li class="menu__item"><a href="feedback.html">Вiдгуки</a>
+          <li class="menu__item"><a href="#">Контакти </a>
           </li>
-          <li class="menu__item"><a href="#">Подарувати сертифiкат</a>
-          </li>
-          <li class="menu__item"><a href="#">Контакти</a>
-          </li>
-          <li class="menu__item"><a href="null">Кабiнет</a>
+          <li class="menu__item"><a href="#">Кабинет</a>
           </li>
         </ul>
       </div>
@@ -616,7 +610,7 @@
         </div>
       </div><a class="btn" href="#">Отримати консультацію менеджера</a>
     </section>
-    <section class="callback-form">
+    <section class="callback-form" id="callback-form">
       <div class="section-title">Зворотнiй зв’язок</div>
       <form class="form" action="POST" id="callbackForm">
         <label class="required" for="name">
@@ -671,9 +665,9 @@
             <ul class="footer__list">
               <li><a href="">Про нас</a>
               </li>
-              <li><a href="">Викладачі</a>
+              <li><a href="tutors.html">Викладачі</a>
               </li>
-              <li><a href="">Відгуки</a>
+              <li><a href="feedback.html">Відгуки</a>
               </li>
               <li><a href="">Питання і відповіді</a>
               </li>
@@ -704,7 +698,7 @@
         </div>
         <div class="col">
           <div class="btn-wrap"><a class="btn_blue footer__btn btn" href="#">Стати МЕНТОРОМ</a><a
-              class="btn_blue footer__btn btn" href="#">ЗАЛИШИТИ ВІДГУК</a>
+              class="btn_blue footer__btn action-btn btn" href="#">ЗАЛИШИТИ ВІДГУК</a>
           </div>
         </div>
       </div>
@@ -720,9 +714,9 @@
           <ul class="footer__list">
             <li><a href="">Про нас</a>
             </li>
-            <li><a href="">Викладачі</a>
+            <li><a href="tutors.html">Викладачі</a>
             </li>
-            <li><a href="">Відгуки</a>
+            <li><a href="feedback.html">Відгуки</a>
             </li>
             <li><a href="">Питання і відповіді</a>
             </li>
@@ -764,9 +758,80 @@
       </div>
     </div>
   </footer>
+  <div class="popup feedback-popup">
+    <div class="popup-body">
+      <div class="popup__close"></div>
+      <div class="feedback-popup__img">
+        <img src="img//tutors-img.svg" alt="tutor">
+      </div>
+      <p class="feedback-popup__name">Им’я Прізвище</p>
+      <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+          class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+          class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+      </div>
+      <p class="feedback-popup__text">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента, тут він вас
+        хвалить.Текст відгуку студента, тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст відгуку
+        студента, тут він вас хвалить.Текст відгуку студента,
+        тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст відгуку студента, тут він вас
+        хвалить.Текст відгуку студента, тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст відгуку
+        студента, тут він вас хвалить.Текст
+        відгуку студента, тут він вас хвалить</p>
+      <div class="feedback-popup__item">
+        <p>Курс:</p>
+        <p>Назва курсу</p>
+      </div>
+      <div class="feedback-popup__item">
+        <p>Викладач:</p>
+        <p>Ім’я Прізвище</p>
+      </div>
+    </div>
+  </div>
+  <div class="popup give-feedback-popup">
+    <div class="popup-body">
+      <div class="popup__close"></div>
+      <h2 class="popup__title">ЗАЛИШИТИ ВІДГУК</h2><a class="back-link">Назад </a>
+      <form class="form" action="POST" id="feedbackForm">
+        <label class="required" for="name">
+          <input type="text" name="name" placeholder="Ім’я" required>
+        </label>
+        <label class="required" for="phone">
+          <input type="phone" name="phone" placeholder="Номер телефона" required>
+        </label>
+        <label class="required" for="email">
+          <input type="email" name="email" placeholder="E-mail" required>
+        </label>
+        <select class="select-course custom-select custom-select-required" name="course" id="courseFeed">
+          <option value=""></option>
+          <option value="HTML">HTML</option>
+          <option value="CSS">CSS</option>
+          <option value="JS">JS</option>
+        </select>
+        <select class="custom-select custom-select-required" name="tutor" id="tutor">
+          <option value=""></option>
+          <option value="Иван Иваненко">Иван Иваненко</option>
+          <option value="Петр Петренко">Петр Петренко</option>
+          <option value="Светлана Светленко">Светлана Светленко</option>
+        </select>
+        <div class="form-rate required">
+          <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+              class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+              class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+          </div>
+        </div>
+        <label class="required" for="social">
+          <input type="" name="social" placeholder="Соціальна мережа" required>
+        </label>
+        <textarea name="comment" placeholder="Повідомлення"></textarea>
+        <div class="from__btn">
+          <button class="btn" type="submit">Надіслати ЗАЯВКУ</button>
+        </div>
+      </form>
+    </div>
+  </div>
   <script src="js/nice-select2.js"></script>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
+  <script src="js/popup.js"></script>
 </body>
 
 </html>
