tutors rate star

--- a/feedback.html
+++ b/feedback.html
@@ -716,7 +716,7 @@
                 <img src="img//tutors-img.svg" alt="tutor">
             </div>
             <p class="feedback-popup__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+            <div class="tutors-card__rate" data-stars="1"><i class="mentors__star fa-solid fa-star"></i><i
                     class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
                     class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
             </div>
@@ -736,12 +736,14 @@
                 <p>Ім’я Прізвище
                     <script src="js/nice-select2.js"></script>
                     <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-                    <script src="js/popup.js"></script>
+                    <script src="js/popup.js">
+                    </script>
                     <script src="js/script.js"></script>
                 </p>
             </div>
         </div>
     </div>
+    <script src="js/star.js"></script>
 </body>
 
 </html>
